# rvc

./: DOCUMENTATION.md  LICENSE  PYPI_FIXES.md  README.md  cli.py  colab.py  gui.py  mdx.py  open-gui.bat  pyproject.toml  requirements.txt  uvr.py
audio_separator/separator/: separator.py
audio_separator/utils/: cli.py
colab/: rvc_demo.ipynb
rvc/: utils.py  var.py
rvc/api/: __init__.py  app.py
rvc/infer/: __init__.py  cli.py  infer.py  inference.py  pipeline.py
rvc/lib/: config.py
rvc/lib/algorithm/: attentions.py  encoders.py  modules.py  residuals.py  synthesizers.py
rvc/lib/backend/: opencl.py  stftpitchshift.py  zulda.py
rvc/lib/embedders/: fairseq.py
rvc/lib/generators/: hifigan.py  nsf_hifigan.py  refinegan.py
rvc/lib/onnx/: onnx_export.py  wrapper.py
rvc/lib/predictor/: djcm.py  generator.py  pyworld.py  rmvpe.py  torchfcpe.py
rvc/tools/: gdown.py
