[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc"
version = "0.1.0"
description = "A simple, high-quality voice conversion tool focused on simplicity and ease of use."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SawitProjet"}
]
keywords = ["rvc", "voice-conversion", "audio", "machine-learning", "deep-learning", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pip>=23.3",
    "wheel",
    "omegaconf>=2.0.6",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "faiss-cpu==1.7.3; python_version < "3.12"",
    "faiss-cpu>=1.7.3; python_version >= "3.12"",
    "transformers>=4.49.0",
    "scikit-learn",
    "einops>=0.8.0",
    "librosa>=0.10.2",
    "praat-parselmouth",
    "soundfile>=0.13.0",
    "numpy>=1.25.2,<2.4",
    "scipy>=1.15.0",
    "requests>=2.32.3",
    "aiohttp",
    "ffmpy==0.3.1",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.7.2",
    "gradio",
    "yt-dlp",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "edge-tts>=7.2.7",

]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu; sys_platform != 'darwin'",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.scripts]
rvc = "rvc.infer.cli:main"

[project.urls]
Homepage = "https://github.com/SawitProject/rvc"
Repository = "https://github.com/SawitProject/rvc.git"
Issues = "https://github.com/SawitProject/rvc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rvc*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
